중간발표에서 시연한 프로그램의 백엔드입니다. 검색, 질문과 응답, 결론 제시, 로그인을 위한 코드가 구현되어 있습니다.